--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,14 @@ spring:
     username: gunni_user
     password: gunni1234!
 
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
 application:
   jwt:
     refresh-exp: 2592000000 #30?
