--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Docker build & push to prod
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker build -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/qvick:0.0.2 .
-        docker push ${{ secrets.DOCKER_USERNAME }}/qvick:0.0.2
+        docker build -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/gunnihae:latest .
+        docker push ${{ secrets.DOCKER_USERNAME }}/gunnihae:latest
 
     - name: Deploy to prod
       uses: appleboy/ssh-action@master
