--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,6 +16,16 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: set yml file
+      uses: microsoft/variable-substitution@v1
+      with:
+        files: src/main/resources/application.yml
+      env:
+        spring.datasource.url: ${{ secrets.DB_URL }}
+        spring.datasource.username: ${{ secrets.DB_USERNAME }}
+        spring.datasource.password: ${{ secrets.DB_PASSWORD }}
+        application.jwt.secretKey: ${{ secrets.JWT_SECRET_KEY }}
+
     - name: set chmod
       run: chmod +x ./gradlew
         
